# dev-browser-go

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  HANDOVER.md  README.md  SKILL.md  cli.py  daemon.py  flake.nix  garnix.yaml  go.mod  go.sum  pyproject.toml  server.py
.github/workflows/: ci.yml
cmd/dev-browser-go/: actions.go  bool_flags.go  bounds.go  call.go  click_ref.go  close_page.go  console.go  daemon.go  fill_ref.go  globals.go  goto.go  helpers.go  list_pages.go  main.go  main_test.go  press.go  root.go  save_html.go  screenshot.go  snapshot.go  start_stop.go  status.go  wait.go
docs/: DEPLOYING.md
internal/devbrowser/: chromium.go  client.go  client_test.go  console.go  console_test.go  daemon.go  daemon_test.go  device.go  device_test.go  host.go  runner.go  targets.go
